wow much commit

--- a/src/app/components/general/button/button.component.scss
+++ b/src/app/components/general/button/button.component.scss
@@ -2,12 +2,12 @@
 
 :host {
     & app-tooltip {
-        @include mixins.transitions((opacity: 0, visibility: hidden));
+        @include mixins.fadeout();
     }
 
     & img {
         &:hover~app-tooltip {
-            @include mixins.transitions((opacity: 1, visibility: visible));
+            @include mixins.fadein();
         }
     }
 }
