--- a/src/app/components/views/home/home.component.html
+++ b/src/app/components/views/home/home.component.html
@@ -11,7 +11,8 @@
     </p>
     <h4>Was ich tue?</h4>
     <p>Als leidenschaftlicher Problemlöser und kreativer Geist habe ich mir zum Ziel gesetzt, innovative Lösungen zu
-      realisieren und durch meine Arbeit einen positiven Einfluss zu hinterlassen. Sei es durch das Entwickeln von
+      realisieren und durch <a (click)="navigateProjects()" class="link">&nbsp;meine Arbeit&nbsp;</a> einen positiven
+      Einfluss zu hinterlassen. Sei es durch das Entwickeln von
       Applikationen mit Mehrwert, Wissensvermittlung an die kommenden Generationen oder das Kreieren von Kunstwerken,
       die die Menschen erreichen und erfreuen sollen.</p>
   </div>
