--- a/src/app/components/general/button/button.component.html
+++ b/src/app/components/general/button/button.component.html
@@ -1,8 +1,6 @@
-<img *ngIf="!image" src="{{ type.image.path }}" alt="icon for {{ name }} link" loading="lazy" (click)="onClick()"
-  class="preview-image link" />
-<img *ngIf="image" src="{{ image.path }}" alt="{{ image.alt }}" loading="lazy" (click)="onClick()"
-  class="preview-image link" />
-<p *ngIf="showName" class="slimpill">{{name}}</p>
+<img *ngIf="!image" src="{{ type.image.path }}" alt="icon for {{ name }} link" loading="lazy" />
+<img *ngIf="image" src="{{ image.path }}" alt="{{ image.alt }}" loading="lazy" />
+<p *ngIf="showName">{{name}}</p>
 <app-tooltip *ngIf="type == lt.GITHUB" name="Please don't look at my code, it's horrible"
   [direction]="d.LEFT"></app-tooltip>
 <!--p *ngIf="type === lt.OTHER || type === lt.PERSON" (click)="onClick()">{{name}}</p-->
