--- a/src/app/components/general/filter/filter.component.html
+++ b/src/app/components/general/filter/filter.component.html
@@ -1,58 +1,81 @@
 <div class="filterSelectedContainer">
   <div class="filterSelected">
-    <ng-container *ngFor="let category of selectedFilter">
-      <ng-container *ngIf="category.range">
-        <div *ngIf="!isDefaultRangeValue(category)" class="selectedItem pill" (click)="resetRange(category)">
-          <p>{{ category.name }}: {{ category.value[0] }} - {{ category.value[1] }}<b> X</b></p>
-        </div>
-      </ng-container>
-      <ng-container *ngIf="!category.range">
-        <div *ngFor="let item of category.value" class="selectedItem pill"
-          (click)="toggleTag(category.id, category.name, item)">
-          <p>{{ getName(category.id, item) }}<b> X</b></p>
-        </div>
+    <ng-container *ngFor="let filter of selectedFilter">
+      <ng-container *ngFor="let category of filter.categories">
+        <ng-container *ngIf="category.isRange">
+          <div *ngIf="!isDefaultRangeValue(filter, category)" class="selectedItem pill link"
+            (click)="resetRange(filter, category)">
+            <p>{{ category.name }}: {{ category.tags[0].value }} - {{ category.tags[1].value }}<b> X</b></p>
+          </div>
+        </ng-container>
+        <ng-container *ngIf="!category.isRange">
+          <div *ngFor="let tag of category.tags" class="selectedItem pill link"
+            (click)="toggleTag(filter, category, tag)">
+            <p>{{ tag.name }}<b> X</b></p>
+          </div>
+        </ng-container>
       </ng-container>
     </ng-container>
   </div>
 </div>
-<div #comp class="filterComp slimpill">
+<div #fullcomp class="fullFilterComp slimpill notactive">
   <div class="filterTitle flex-e2e">
-    <div class="showFilter flex-row-nojust" (mouseenter)="comp.classList.add('hover')"
-      (mouseleave)="comp.classList.remove('hover')" (click)="img.classList.toggle('notactive'); items.classList.toggle('active'); items.classList.toggle('notactive')
-      ">
-      <img #img class="arrowImg small-image notactive" src="{{ arrowIcon.path }}" alt="{{ arrowIcon.alt }}"
+    <div class="showFilter flex-row-nojust" (mouseenter)="fullcomp.classList.add('hover')"
+      (mouseleave)="fullcomp.classList.remove('hover')" (click)="fullimg.classList.toggle('notactive'); fullcomp.classList.toggle('active'); fullcomp.classList.toggle('notactive')
+    ">
+      <img #fullimg class="arrowImg small-image notactive" src="{{ arrowIcon.path }}" alt="{{ arrowIcon.alt }}"
         loading="lazy" />
-      <h3>{{ filterName }}</h3>
+      <h3>Filtern</h3>
     </div>
-    <p (click)="reset()" class="filterReset link pill">Zurücksetzen</p>
+    <p *ngIf="selectedFilter.length > 0" (click)="reset()" class="filterReset link pill">Zurücksetzen</p>
   </div>
-  <div #items class="filterItems notactive">
-    <div class="filterCategories flex-row-nojust">
-      <div #cat *ngFor="let category of filters.categories" class="notactive">
-        <div class="showFilter filterCategory flex-row-nojust" (click)="
-            cat.classList.toggle('active'); cat.classList.toggle('notactive'); imgF.classList.toggle('notactive')
-          ">
-          <img #imgF class="arrowImg small-image notactive" src="{{ arrowIcon.path }}" alt="{{ arrowIcon.alt }}"
-            loading="lazy" />
-          <p class="categoryTitle">{{ category.name }}</p>
+  <div *ngFor="let filter of filters" #comp class="filterComp">
+    <h4 *ngIf="filters.length > 1" class="filterTitle subTitle">{{ filter.name }}</h4>
+    <div #items class="filterCategories flex-row-nojust">
+      <ng-container *ngFor="let category of filter.categories">
+        <div *ngIf="!category.isRange && category.tags.length == 1 && category.id != projectFilterProps.relevance"
+          (click)="toggleTag(filter, category, category.tags[0]);" class="pill tag link" [id]="category.tags[0].id">
+          <img *ngIf=" category.tags[0].image" src="{{ category.tags[0].image.path }}"
+            alt="{{ category.tags[0].image.alt }}" class="tagIcon small-image" loading="lazy" />
+          <p>{{ category.tags[0].name }}</p>
         </div>
-        <div class="tags flex-list">
-          <div *ngFor="let tag of category.tags" (click)="toggleTag(category.id, category.name, tag.value);" class="tag"
+        <div *ngIf="category.id == projectFilterProps.relevance && getRelevanceTag(category) as tag"
+          (click)="toggleTag(filter, category, tag);" class="pill tag link" [id]="tag.id">
+          <p>{{ tag.name}}</p>
+        </div>
+
+        <!--ng-container *ngIf="!category.isRange && category.tags.length == 2">
+          <div *ngFor="let tag of category.tags" (click)="toggleTag(filter, category, tag);" class="pill tag"
             [id]="tag.id">
-            <img *ngIf="tag.image" src="{{ tag.image.path }}" alt="{{ tag.image.alt }}" class="tagIcon small-image"
+            <img *ngIf=" tag.image" src="{{ tag.image.path }}" alt="{{ tag.image.alt }}" class="tagIcon small-image"
               loading="lazy" />
-            <p>{{ tag.name }}</p>
+            <p>{{ category.name +": "+tag.name}}</p>
+          </div>
+        </ng-container -->
+
+        <div #cat *ngIf="!category.isRange && category.id != projectFilterProps.relevance && category.tags.length > 1"
+          class="notactive">
+          <div class="showFilter filterCategory flex-row-nojust" (click)="
+              cat.classList.toggle('active'); cat.classList.toggle('notactive'); imgF.classList.toggle('notactive')
+            ">
+            <img #imgF class="arrowImg small-image notactive" src="{{ arrowIcon.path }}" alt="{{ arrowIcon.alt }}"
+              loading="lazy" />
+            <p class="categoryTitle">{{ category.name}}</p>
+          </div>
+          <div class="tags flex-list">
+            <div *ngFor="let tag of category.tags" (click)="toggleTag(filter, category, tag);" class="tag"
+              [id]="tag.id">
+              <img *ngIf="tag.image" src="{{ tag.image.path }}" alt="{{ tag.image.alt }}" class="tagIcon small-image"
+                loading="lazy" />
+              <p>{{ tag.name }}</p>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
-
-    <div #ran *ngFor="let range of filters.ranges" class="filterRange">
-      <app-range [range]="range" (rangeEmitter)="updateRange($event)"></app-range>
+        <app-range *ngIf="category.isRange" [range]="category" (rangeEmitter)="updateRange(filter, $event)"></app-range>
+      </ng-container>
     </div>
   </div>
 </div>
-
 <!-- p>{{filtersSelected$ | async | json}}</p>
 <form #filterForm="ngForm">
     {{filterForm.value | json}}
