--- a/src/app/components/views/career/career.component.scss
+++ b/src/app/components/views/career/career.component.scss
@@ -83,12 +83,57 @@
         }
     }
 
+    & .projects {
+
+        &.notactive .projectsList {
+            display: none;
+        }
+
+        & .projectsList {
+            padding: variables.$elem-padding;
+            gap: variables.$elem-padding;
+
+            & app-button {
+                @include screens.mobile-screen {
+                    flex-basis: calc(100%);
+                }
+
+                @include screens.tablet-screen {
+                    flex-basis: calc(50% - (variables.$elem-padding / 2));
+                }
+
+                @include screens.laptop-screen {
+                    flex-basis: calc(50% - (variables.$elem-padding / 2));
+                }
+
+                @include screens.desktop-screen {
+                    flex-basis: calc((100% - (4 * variables.$elem-padding)) / 3);
+                }
+
+                @include screens.large-screen {
+                    flex-basis: calc((100% - (6 * variables.$elem-padding)) / 4);
+                }
+            }
+        }
+
+        & .showProjects {
+            padding: variables.$elem-padding;
+            cursor: pointer;
+
+            & .arrowImg.notactive {
+                transform: rotate(180deg);
+            }
+        }
+    }
+
     & .skills {
+
         &.notactive app-skills-percent {
             display: none;
         }
 
         & .showSkills {
+            padding: variables.$elem-padding;
             cursor: pointer;
 
             & .arrowImg.notactive {
